tests/feature_tests/snapshots/e2e__feature_tests__matching_dotfiles__Fish.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
fnm env | source
echo 11.10.0 > .nvmrc
echo 11.10.0 > .node-version
fnm install
fnm use
if test (node -v) != "v11.10.0"
    echo 'Expected Node version to be "v11.10.0", Got: '(node -v)
    exit 1
end
