tests/feature_tests/snapshots/e2e__feature_tests__matching_dotfiles__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
echo 11.10.0 > .nvmrc
echo 11.10.0 > .node-version
fnm install
fnm use
if [ "$(node -v)" != "v11.10.0" ]; then
    echo 'Expected Node version to be "v11.10.0", Got: '"$(node -v)"
    exit 1
fi
